# StanfordQuadruped

./: .devcontainer.json  .gitignore  Dingo Robot Bill of Materials.xlsx  Docker-compose.yaml  Dockerfile  LICENSE  README.md  ROSpackageinfo.md  RunPyBulletSim.py  Testing notebook.ipynb  Useful code commands.md  calibrate_servos.py  default_joints.json  dingo.repos  draw_test.csv  hop.json  imu_test.py  install.sh  install_djipupper.sh  left_wave.json  list.txt  motorTest.py  profile-results  profile-results-numba-cache  pyproject.toml  robot.service  run_djipupper.py  run_djipupper_sim.py  run_robot.py  saved_joint_angles.json  servoDefinition.py  setup.py  smiley.csv  standup.json  standup2.json  standup3.json
dingo_ws/src/dingo_description/: CMakeLists.txt  package.xml
dingo_ws/src/dingo_description/config/: joint_names_dingo_description.yaml
dingo_ws/src/dingo_description/launch/: dingo_rviz.rviz  dingo_state_publisher.launch  notspot_rviz.rviz
dingo_ws/src/dingo_description/meshes/: FL1_obj.mtl  FL_link1.STL  FL_link1.dae  FL_link2.STL  FL_link4.STL  FR1_obj.mtl  FR_link1.STL  FR_link1.dae  FR_link2.STL  FR_link3.STL  FR_link4.STL  L2_obj.mtl  L3_obj.mtl  L_link1_collision.STL  L_link2.dae  L_link2_collision.STL  L_link3.dae  L_link3_collision.STL  R2_obj.mtl  R3_obj.mtl  RL1_obj.mtl  RL_link1.STL  RL_link1.dae  RL_link2.STL  RL_link3.STL  RL_link4.STL  RR1_obj.mtl  RR_link1.STL  RR_link1.dae  RR_link2.STL  RR_link3.STL  RR_link4.STL  R_link1_collision.STL  R_link2.dae  R_link2_collision.STL  R_link3.dae  R_link3_collision.STL  base_collision.STL  base_link.STL  (+5 more)
(+850 files in other folders)
