<?xml version="1.0"?>
<package format="2">
  <name>dingo_description</name>
  <version>1.0.0</version>
  <description>The dingo_description package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
